# ROBO

pi/: .bash_history  .bashrc  .wget-hsts
pi/code/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
pi/code/install/rb3_package/lib/rb3_package/: rb3_node
pi/code/install/rb3_package/share/rb3_package/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
pi/code/install/rb3_package_cpp/lib/rb3_package_cpp/: rb3_node_cpp
pi/code/install/rb3_package_cpp/share/ament_index/resource_index/package_run_dependencies/: rb3_package_cpp
pi/code/install/rb3_package_cpp/share/ament_index/resource_index/parent_prefix_path/: rb3_package_cpp
pi/code/install/rb3_package_cpp/share/rb3_package_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
pi/code/install/rb3_package_cpp/share/rb3_package_cpp/cmake/: rb3_package_cppConfig-version.cmake  rb3_package_cppConfig.cmake
pi/code/install/rb3_package_cpp/share/rb3_package_cpp/environment/: ament_prefix_path.dsv  path.dsv
pi/code/log/: latest_build
pi/code/src/rb3_package/: package.xml  setup.cfg  setup.py
pi/code/src/rb3_package/rb3_package/: rb3_node.py
pi/code/src/rb3_package_cpp/: CMakeLists.txt
pi/code/src/rb3_package_cpp/src/: rb3_node_cpp.cpp
pi/portaudio/examples/: .paex_sine.c.swp  padevs  paexsine
pi/turtlebot3_ws/install/: setup.sh
pi/turtlebot3_ws/log/: latest_build
